<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HasilActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/llv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/gambar_teks" />

                    <ImageView
                        android:id="@+id/imageIv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:maxHeight="250dp"
                        android:padding="5dp"
                        android:src="@mipmap/ic_launcher"
                        android:visibility="visible"
                        tools:visibility="visible" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/hasil_konversi" />

                        <ImageView
                            android:id="@+id/refreshIcon"
                            android:layout_width="47dp"
                            android:layout_height="match_parent"
                            android:contentDescription="@null"
                            android:padding="5dp"
                            android:src="@drawable/ic_reload" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/resultEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:background="@null"
                        android:ellipsize="none"
                        android:hint="@null"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine|textCapSentences"
                        android:paddingTop="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="8dp"
                        android:scrollHorizontally="false"
                        android:textColor="#000"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="8dp">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/txt_dari"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/indonesia"
                            android:textSize="20sp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintRight_toLeftOf="@+id/iv_swipe"/>
                        <ImageView
                            android:id="@+id/iv_swipe"
                            android:layout_width="45dp"
                            android:layout_height="33dp"
                            android:src="@drawable/ic_baseline_swap_horiz_24"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            />
                        <TextView
                            android:id="@+id/txt_ke"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/inggris"
                            android:textSize="20sp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintLeft_toRightOf="@+id/iv_swipe"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <Button
                        android:id="@+id/btn_translate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/translate"
                        android:textSize="16sp"
                        android:textColor="#151515"
                        android:background="@drawable/background_translate"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="8dp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/hasil_terjemahan" />

<!--                    <EditText-->
<!--                        android:id="@+id/resultHasil"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="357dp"-->
<!--                        android:layout_weight="1"-->
<!--                        android:autoLink="all"-->
<!--                        android:background="@null"-->
<!--                        android:ellipsize="none"-->
<!--                        android:hint="@null"-->
<!--                        android:importantForAutofill="no"-->
<!--                        android:inputType="textMultiLine|textCapSentences"-->
<!--                        android:padding="5dp"-->
<!--                        android:scrollHorizontally="false"-->
<!--                        android:textColor="#000"-->
<!--                        />-->

                    <TextView
                        android:id="@+id/resultHasil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="#000"
                        android:textSize="18sp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>